# k8s-stats

./: .gitignore  Cargo.toml.bak  Docker.sh  Dockerfile  ai_studio_code copy 2.sh  ai_studio_code copy.sh  ai_studio_code.sh  create_pod.sh  pod_state.py
fake_test/: fake_cmd.yml  fake_script.sh  fake_script.yml
k8s-pod-monitor/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  main.py  requirements.txt  web_server.py
k8s-pod-monitor/rust_analyzer/: Cargo.toml
k8s-pod-monitor/rust_analyzer/src/: lib.rs
k8s-pod-monitor/templates/: dashboard.html
node_stat/: Cargo.toml
node_stat/src/: main.rs
