[package]
name = "k8s-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.91.0", features = ["runtime", "derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
k8s-openapi = { version = "0.22", features = ["v1_30"] }
